# A380_Systems

./: CMakeLists.txt  README.md  contrib.md  main.cpp  makefile
FuelSystem/: FuelBus.cpp  FuelBus.h  FuelBusValve.cpp  FuelBusValve.h  FuelConsumer.cpp  FuelConsumer.h  FuelPump.cpp  FuelPump.h  FuelSystem.cpp  FuelSystem.h  FuelTankValve.cpp  FuelTankValve.h
docker/: README.md
include/SDK/CHeaders/XPLM/: XPLMDefs.h
src/: CMakeLists.txt  main.cpp
src/COCKPIT/: CockpitControls.cpp  CockpitControls.h
src/ECAM/: ECAMDataCache.cpp  ECAMDataCache.h  ECAMFrontend.cpp  ECAMFrontend.h  ECAMSystemControl.cpp  ECAMSystemControl.h  FuelMonitor.cpp  FuelMonitor.h  PlaneSystemsRefs.cpp  PlaneSystemsRefs.h  ecam_notes
src/ECAM/Procedures/: ECAMProcedure.cpp  ECAMProcedure.h  F001_AllFeedLow.cpp  F001_AllFeedLow.h  ProcReturnData.cpp  ProcReturnData.h
src/FUEL/: FuelSystemFrontend.cpp  FuelSystemFrontend.h  SystemControl.cpp  SystemControl.h  readme.md  tables.md
src/FUEL/FuelSystem/: EmergTransValve.h  FuelBus.cpp  FuelBus.h  FuelBusValve.h  FuelConsumer.cpp  FuelConsumer.h  FuelSystem.cpp  FuelTank.cpp  FuelTank.h  FuelTankValve.cpp
src/FUEL/PhysicalFuelSystem/: EmergTransValve.cpp  EmergTransValve.h  FuelBus.cpp  FuelBus.h  FuelBusValve.cpp  FuelBusValve.h  FuelConsumer.cpp  FuelConsumer.h  FuelPump.cpp  FuelPump.h  FuelSystem.cpp  FuelSystem.h  FuelTank.cpp  FuelTank.h  FuelTankValve.cpp  FuelTankValve.h
src/FUEL/PlaneFuelSystem/: DistributionTables.cpp  DistributionTables.h  FQDC.cpp  FQDC.h  FQMS.cpp  FQMS.h  FQMSFailuresDetect.cpp  FuelDistributor.cpp  FuelDistributor.h  FuelSystemFronend.cpp  FuelSystemFronend.h  SystemControl.cpp  SystemControl.h
src/FUEL/PlaneFuelSystem/Tables/: Table0.cpp  Table1.cpp  Table2.cpp  Table3.cpp  Tables.h
src/FUEL/PlaneFuelSystem/Templates/: InnerFeed14.cpp  InnerFeed14.h  InnerFeed23.cpp  InnerFeed23.h  InnerFeeds.cpp  InnerFeeds.h  InnerOuter.cpp  InnerOuter.h  MidFeed14.cpp  MidFeed14.h  MidFeed23.cpp  MidFeed23.h  MidFeeds.cpp  MidFeeds.h  MidOuter.cpp  MidOuter.h  OutFeeds.cpp  OutFeeds.h  OutInner.cpp  OutInner.h  OutMid.cpp  OutMid.h  Template.h  TemplateGetter.cpp  TemplateGetter.h  TrimFeeds.cpp  TrimFeeds.h  TrimInner.cpp  TrimInner.h  TrimMid.cpp  TrimMid.h
src/FuelSystem/: EmergTransValve.cpp  EmergTransValve.h  FuelBus.cpp  FuelBus.h  FuelBusValve.cpp  FuelBusValve.h  FuelConsumer.cpp  FuelConsumer.h  FuelPump.cpp  FuelPump.h  FuelSystem.cpp  FuelSystem.h  FuelTank.cpp  FuelTank.h  FuelTankValve.cpp  FuelTankValve.h
src/PlaneFuelSystem/: DistributionTables.cpp  DistributionTables.h  FQDC.cpp  FQDC.h  FQMS.cpp  FQMS.h  FuelDistributor.h  SystemControl.cpp  SystemControl.h
src/PlaneFuelSystem/Tables/: Table0.cpp  Table1.cpp  Table2.cpp  Table3.cpp  Tables.h
src/PlaneFuelSystem/Templates/: InnerFeed14.cpp  InnerFeed14.h  InnerFeed23.cpp  InnerFeed23.h  InnerFeeds.cpp  InnerFeeds.h  InnerOuter.cpp  InnerOuter.h  MidFeed14.cpp  MidFeed14.h  MidFeed23.cpp  MidFeed23.h  MidFeeds.cpp  MidFeeds.h  MidOuter.cpp  MidOuter.h  OutFeeds.cpp  OutFeeds.h  OutInner.cpp  OutInner.h  OutMid.cpp  OutMid.h  Template.cpp  Template.h  TemplateGetter.cpp  TemplateGetter.h  TrimFeeds.cpp  TrimFeeds.h  TrimInner.cpp  TrimInner.h  TrimMid.cpp  TrimMid.h
src/PluginControl/: ECAMCallbacks.cpp  ECAMCallbacks.h  PlaneSystemsFrontends.h  PlaneSystemsRefs.h  PluginControl.cpp  PluginControl.h  SimulatorData.cpp  SimulatorData.h  SystemsControl.cpp  SystemsControl.h
src/PluginControl/DatarefHandlers/: COCKPIT_DataHandlers.cpp  COCKPIT_DataHandlers.h  ECAM_DataHandlers.cpp  ECAM_DataHandlers.h  FUEL_DataHandlers.cpp  FUEL_DataHandlers.h  XPLANE_DataHandlers.cpp  XPLANE_DataHandlers.h
