cmake_minimum_required(VERSION 3.17)
project(A380_Systems)

set(CMAKE_CXX_STANDARD 14)

add_definitions(-DIBM -Isrc -m64 -DIBM -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301 -DXPLM302  -Iinclude/sdk/cheaders/xplm -Iinclude/sdk/cheaders/widgets -shared -Linclude/sdk/libraries/win  -lXPLM_64 -lXPWidgets_64)
add_executable(A380_Systems src/main.cpp src/FUEL/FuelSystem/FuelSystem.cpp src/FUEL/FuelSystem/FuelSystem.h src/FUEL/FuelSystem/FuelTank.cpp src/FUEL/FuelSystem/FuelTank.h src/FUEL/FuelSystem/FuelPump.cpp src/FUEL/FuelSystem/FuelPump.h src/FUEL/FuelSystem/FuelTankValve.cpp src/FUEL/FuelSystem/FuelTankValve.h src/FUEL/FuelSystem/FuelBus.cpp src/FUEL/FuelSystem/FuelBus.h src/FUEL/FuelSystem/FuelBusValve.cpp src/FUEL/FuelSystem/FuelBusValve.h src/FUEL/FuelSystem/FuelConsumer.cpp src/FUEL/FuelSystem/FuelConsumer.h src/FUEL/FuelSystem/EmergTransValve.cpp
        src/FUEL/PlaneFuelSystem/Tables/Tables.h src/FUEL/PlaneFuelSystem/Tables/Table0.cpp src/FUEL/PlaneFuelSystem/Tables/Table1.cpp src/FUEL/PlaneFuelSystem/Tables/Table2.cpp src/FUEL/PlaneFuelSystem/Tables/Table3.cpp src/FUEL/PlaneFuelSystem/DistributionTables.h src/FUEL/PlaneFuelSystem/DistributionTables.cpp src/FUEL/PlaneFuelSystem/FuelDistributor.h src/FUEL/PlaneFuelSystem/FuelDistributor.cpp src/FUEL/PlaneFuelSystem/FQDC.cpp src/FUEL/PlaneFuelSystem/FQDC.h src/FUEL/PlaneFuelSystem/FQMS.cpp src/FUEL/PlaneFuelSystem/FQMS.h src/FUEL/PlaneFuelSystem/SystemControl.cpp
        src/FUEL/PlaneFuelSystem/SystemControl.h src/FUEL/PlaneFuelSystem/Templates/Template.h src/FUEL/PlaneFuelSystem/Templates/TemplateGetter.cpp src/FUEL/PlaneFuelSystem/Templates/TemplateGetter.h src/FUEL/PlaneFuelSystem/Templates/InnerFeed14.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeed14.h src/FUEL/PlaneFuelSystem/Templates/TrimFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/TrimFeeds.h src/FUEL/PlaneFuelSystem/Templates/InnerOuter.cpp src/FUEL/PlaneFuelSystem/Templates/InnerOuter.h
        src/FUEL/PlaneFuelSystem/Templates/InnerFeed23.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeed23.h src/FUEL/PlaneFuelSystem/Templates/MidFeed14.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeed14.h src/FUEL/PlaneFuelSystem/Templates/MidFeed23.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeed23.h src/FUEL/PlaneFuelSystem/Templates/MidFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeeds.h src/FUEL/PlaneFuelSystem/Templates/MidOuter.cpp src/FUEL/PlaneFuelSystem/Templates/MidOuter.h src/FUEL/PlaneFuelSystem/Templates/OutFeeds.cpp
        src/FUEL/PlaneFuelSystem/Templates/OutFeeds.h src/FUEL/PlaneFuelSystem/Templates/OutInner.cpp src/FUEL/PlaneFuelSystem/Templates/OutInner.h src/FUEL/PlaneFuelSystem/Templates/OutMid.cpp src/FUEL/PlaneFuelSystem/Templates/OutMid.h src/FUEL/PlaneFuelSystem/Templates/TrimInner.cpp src/FUEL/PlaneFuelSystem/Templates/TrimInner.h src/FUEL/PlaneFuelSystem/Templates/TrimMid.cpp src/FUEL/PlaneFuelSystem/Templates/TrimMid.h
        src/FUEL/PlaneFuelSystem/Templates/InnerFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeeds.h src/FUEL/PlaneFuelSystem/FQMSFailuresDetect.cpp src/ECAM/Procedures/ECAMProcedure.cpp src/ECAM/Procedures/ECAMProcedure.h src/ECAM/Procedures/ProcReturnData.cpp src/ECAM/Procedures/ProcReturnData.h src/ECAM/Procedures/F001_AllFeedLow.cpp src/ECAM/Procedures/F001_AllFeedLow.h src/PLANE/PlaneSystemsRefs.cpp src/PLANE/PlaneSystemsRefs.h src/ECAM/PlaneSystemsRefs.cpp src/ECAM/PlaneSystemsRefs.h src/ECAM/ECAMSystemControl.cpp src/ECAM/ECAMSystemControl.h src/FUEL/PlaneFuelSystem/FuelSystemFronend.cpp src/FUEL/PlaneFuelSystem/FuelSystemFronend.h src/COCKPIT/CockpitControls.cpp src/COCKPIT/CockpitControls.h)


