cmake_minimum_required(VERSION 3.17)
project(A380_Systems)

set(CMAKE_CXX_STANDARD 14)

add_definitions(-DIBM -Isrc -m64 -DIBM -DXPLM200 -DXPLM210 -DXPLM300 -DXPLM301 -DXPLM302  -Iinclude/sdk/cheaders/xplm -Iinclude/sdk/cheaders/widgets -shared -Linclude/sdk/libraries/win  -lXPLM_64 -lXPWidgets_64)
add_executable(A380_Systems src/main.cpp src/FUEL/PhysicalFuelSystem/FuelSystem.cpp src/FUEL/PhysicalFuelSystem/FuelSystem.h src/FUEL/PhysicalFuelSystem/FuelTank.cpp src/FUEL/PhysicalFuelSystem/FuelTank.h src/FUEL/PhysicalFuelSystem/FuelPump.cpp src/FUEL/PhysicalFuelSystem/FuelPump.h src/FUEL/PhysicalFuelSystem/FuelTankValve.cpp src/FUEL/PhysicalFuelSystem/FuelTankValve.h src/FUEL/PhysicalFuelSystem/FuelBus.cpp src/FUEL/PhysicalFuelSystem/FuelBus.h src/FUEL/PhysicalFuelSystem/FuelBusValve.cpp src/FUEL/PhysicalFuelSystem/FuelBusValve.h src/FUEL/PhysicalFuelSystem/FuelConsumer.cpp src/FUEL/PhysicalFuelSystem/FuelConsumer.h src/FUEL/PhysicalFuelSystem/EmergTransValve.cpp
        src/FUEL/PlaneFuelSystem/Tables/Tables.h src/FUEL/PlaneFuelSystem/Tables/Table0.cpp src/FUEL/PlaneFuelSystem/Tables/Table1.cpp src/FUEL/PlaneFuelSystem/Tables/Table2.cpp src/FUEL/PlaneFuelSystem/Tables/Table3.cpp src/FUEL/PlaneFuelSystem/DistributionTables.h src/FUEL/PlaneFuelSystem/DistributionTables.cpp src/FUEL/PlaneFuelSystem/FuelDistributor.h src/FUEL/PlaneFuelSystem/FuelDistributor.cpp src/FUEL/PlaneFuelSystem/FQDC.cpp src/FUEL/PlaneFuelSystem/FQDC.h src/FUEL/PlaneFuelSystem/FQMS.cpp src/FUEL/PlaneFuelSystem/FQMS.h src/FUEL/SystemControl.cpp
        src/FUEL/SystemControl.h src/FUEL/PlaneFuelSystem/Templates/Template.h src/FUEL/PlaneFuelSystem/Templates/TemplateGetter.cpp src/FUEL/PlaneFuelSystem/Templates/TemplateGetter.h src/FUEL/PlaneFuelSystem/Templates/InnerFeed14.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeed14.h src/FUEL/PlaneFuelSystem/Templates/TrimFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/TrimFeeds.h src/FUEL/PlaneFuelSystem/Templates/InnerOuter.cpp src/FUEL/PlaneFuelSystem/Templates/InnerOuter.h
        src/FUEL/PlaneFuelSystem/Templates/InnerFeed23.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeed23.h src/FUEL/PlaneFuelSystem/Templates/MidFeed14.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeed14.h src/FUEL/PlaneFuelSystem/Templates/MidFeed23.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeed23.h src/FUEL/PlaneFuelSystem/Templates/MidFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/MidFeeds.h src/FUEL/PlaneFuelSystem/Templates/MidOuter.cpp src/FUEL/PlaneFuelSystem/Templates/MidOuter.h src/FUEL/PlaneFuelSystem/Templates/OutFeeds.cpp
        src/FUEL/PlaneFuelSystem/Templates/OutFeeds.h src/FUEL/PlaneFuelSystem/Templates/OutInner.cpp src/FUEL/PlaneFuelSystem/Templates/OutInner.h src/FUEL/PlaneFuelSystem/Templates/OutMid.cpp src/FUEL/PlaneFuelSystem/Templates/OutMid.h src/FUEL/PlaneFuelSystem/Templates/TrimInner.cpp src/FUEL/PlaneFuelSystem/Templates/TrimInner.h src/FUEL/PlaneFuelSystem/Templates/TrimMid.cpp src/FUEL/PlaneFuelSystem/Templates/TrimMid.h
        src/FUEL/PlaneFuelSystem/Templates/InnerFeeds.cpp src/FUEL/PlaneFuelSystem/Templates/InnerFeeds.h src/FUEL/PlaneFuelSystem/FQMSFailuresDetect.cpp src/ECAM/Procedures/ECAMProcedure.cpp src/ECAM/Procedures/ECAMProcedure.h src/ECAM/Procedures/ProcReturnData.cpp src/ECAM/Procedures/ProcReturnData.h src/ECAM/Procedures/F001_AllFeedLow.cpp src/ECAM/Procedures/F001_AllFeedLow.h src/PluginControl/PlaneSystemsRefs.h src/ECAM/ECAMSystemControl.cpp src/ECAM/ECAMSystemControl.h src/FUEL/FuelSystemFrontend.cpp src/FUEL/FuelSystemFrontend.h src/COCKPIT/CockpitControls.cpp src/COCKPIT/CockpitControls.h src/PluginControl/SystemsControl.cpp src/PluginControl/SystemsControl.h src/PluginControl/PlaneSystemsFrontends.h src/PluginControl/SimulatorData.cpp src/PluginControl/SimulatorData.h)


